--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     }, 1000);
 
     // Kirim ke Google Sheet
-    const scriptURL = 'https://script.google.com/macros/s/AKfycbyDH3e8cK2AZa8fjiinjifW1p8AF6B2CXFjZFmfPzD-dzCSWtvmv9Fy3FRuCROkq1Ly/exec';
+    const scriptURL = 'AKfycbzotZpEkwR1UFN-uqNwBr7PiFOzDYwHWxVGqb6z6OpLMnl80AvKTN5EszJY6mhnfE6L';
     const form = document.getElementById('rsvpForm');
     const thanks = document.getElementById('terimaKasih');
 
