--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     }, 1000);
 
     // Kirim ke Google Sheet
-    const scriptURL = 'AKfycbzotZpEkwR1UFN-uqNwBr7PiFOzDYwHWxVGqb6z6OpLMnl80AvKTN5EszJY6mhnfE6L';
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbwFaLrKtKQEhW7zGwDuzFH-2usJT4qoDjdNpWbzFG2iqrt0OPtAdE4kov56dZsGgAjC/exec';
     const form = document.getElementById('rsvpForm');
     const thanks = document.getElementById('terimaKasih');
 
